gitops/apps/environments/dev/patches/minio/minio-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console-ingress
spec:
  rules:
    - host: minio-dev.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
  tls:
    - hosts:
        - minio-dev.home
      secretName: minio-dev-console-tls-cert
